crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF047_RUF047_try.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
snapshot_kind: text
---
RUF047_try.py:5:1: RUF047 [*] Empty `else` clause
  |
3 |   except:
4 |       pass
5 | / else:
6 | |     pass
  | |________^ RUF047
  |
  = help: Remove clause

ℹ Safe fix
2 2 |     raise try_body_is_not_checked()
3 3 | except:
4 4 |     pass
5   |-else:
6   |-    pass
7 5 | 
8 6 | 
9 7 | try:

RUF047_try.py:15:1: RUF047 [*] Empty `else` clause
   |
13 |   except:
14 |       to()  # `except`
15 | / else:
16 | |     ...
   | |_______^ RUF047
   |
   = help: Remove clause

ℹ Safe fix
12 12 |     belongs()
13 13 | except:
14 14 |     to()  # `except`
15    |-else:
16    |-    ...
17 15 | 
18 16 | 
19 17 | try:

RUF047_try.py:48:1: RUF047 [*] Empty `else` clause
   |
46 |   except:
47 |       this()
48 | / else:
49 | |     ...
   | |_______^ RUF047
50 |       # This comment belongs to else
51 |   finally:
   |
   = help: Remove clause

ℹ Safe fix
45 45 |     of_course()
46 46 | except:
47 47 |     this()
48    |-else:
49    |-    ...
50 48 |     # This comment belongs to else
51 49 | finally:
52 50 |     pass
