crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF048_RUF048_1.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
snapshot_kind: text
---
RUF048_1.py:5:7: RUF048 `__version__` may contain non-integral-like elements
  |
5 | tuple(map(int, __version__.split(".")))
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF048
6 | list(map(int, __version__.split(".")))
7 | tuple(map(int, bar.__version__.split(".")))
  |

RUF048_1.py:6:6: RUF048 `__version__` may contain non-integral-like elements
  |
5 | tuple(map(int, __version__.split(".")))
6 | list(map(int, __version__.split(".")))
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF048
7 | tuple(map(int, bar.__version__.split(".")))
8 | list(map(int, bar.__version__.split(".")))
  |

RUF048_1.py:7:7: RUF048 `__version__` may contain non-integral-like elements
  |
5 | tuple(map(int, __version__.split(".")))
6 | list(map(int, __version__.split(".")))
7 | tuple(map(int, bar.__version__.split(".")))
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF048
8 | list(map(int, bar.__version__.split(".")))
  |

RUF048_1.py:8:6: RUF048 `__version__` may contain non-integral-like elements
   |
 6 | list(map(int, __version__.split(".")))
 7 | tuple(map(int, bar.__version__.split(".")))
 8 | list(map(int, bar.__version__.split(".")))
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF048
 9 | 
10 | # Comma
   |
